# TracerGen

./: .gitignore  CMakeLists.txt  aabb.h  aarect.h  barnsley_fern.h  blackhole.h  box.h  bvh.h  camera.h  color.h  constant_medium.h  cylinder.h  fractal_noise_texture.h  fractal_tree_3d.h  full_procedural_warped_texture.h  hittable.h  hittable_list.h  main.cpp  material.h  menger_sponge.cpp  menger_sponge.h  moving_sphere.h  parametric_surface.h  perlin.h  procedural_warped_texture.h  pyramid.h  randomized_warped_texture.h  ray.h  reaction_diffusion_texture.h  reaction_diffusion_texture_color.h  rtw_stb_image.h  scenes.h  sierpinski_tetrahedron.h  sphere.h  tetrahedron.h  texture.h  torus.h  triangle.h  turbulence_texture.h  utility.h  (+5 more)
